Preparing to GH pages

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./FILOPage/images/favicon-32x32.png">
   
   <title>Frontend Mentor | Fylo landing page with two column layout</title>
 
@@ -14,11 +14,11 @@
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="FILOPage/style.css">
 </head>
 <body>
     <header>
-        <img src="images/logo.svg" alt="Logo" id="logo">
+        <img src="FILOPage/images/logo.svg" alt="Logo" id="logo">
         <ul id="menu">
             <li><a href="#">Feactures</a></li>
             <li><a href="#">Team</a></li>
@@ -26,7 +26,7 @@
         </ul>
     </header>
     <section id="hero">
-        <img src="images/illustration-1.svg" alt="Ilustration1" id="heroIlustration">
+        <img src="FILOPage/images/illustration-1.svg" alt="Ilustration1" id="heroIlustration">
         <div class="heroIntroduction">
             <h2>
                    <b> All your files in one secure location, accessible anywhere.</b>
@@ -41,7 +41,7 @@
     </section>
 
     <section id="pros">
-        <img src="images/illustration-2.svg" alt="" id="prosIlustration">
+        <img src="FILOPage/images/illustration-2.svg" alt="" id="prosIlustration">
         <div class="heroIntroduction proIntro">
             <h2>Stay productive, wherever you are</h2>
             <p>Never let location be an issue when accessing your files. Fylo has you 
@@ -59,7 +59,7 @@
                    making the switch our team has become a well-oiled collaboration machine.
                 </div>
                 <div class="costumer">
-                  <img src="images/avatar-testimonial.jpg" alt="happyCostumers" class="costumerPic">
+                  <img src="FILOPage/images/avatar-testimonial.jpg" alt="happyCostumers" class="costumerPic">
                   <div class="costumerInfo">
                     <h4>Kyle Burton</h4>
                     <span>Founder & CEO, Huddle</span>
@@ -85,7 +85,7 @@
         </div>
         <div class="realFooter">
             <div class="footerContact">
-                <img src="images/logo-white.svg" alt="">
+                <img src="FILOPage/images/logo-white.svg" alt="">
                 <p class="footerContact phone">Phone: +1-543-123-4567</p>
                 <p class="footerContact email">example@fylo.com</p>
             </div>
